City auto detection added Some code improvements

--- a/TorrentPatcher.csproj
+++ b/TorrentPatcher.csproj
@@ -90,6 +90,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="dNode.cs" />
+    <Compile Include="GeoIP.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
