--- a/Settings.ini
+++ b/Settings.ini
@@ -3,7 +3,9 @@ FirstRun=True
 AutoCheckUpdates=True
 CheckHosts=False
 CheckPing=False
+Timeout=500
 AddStat=False
+AddRetrackerLocal=True
 UpdatePatcher=True
 UpdateTrackers=True
 LaunchPath=C:\Program Files\uTorrent\uTorrent.exe
@@ -19,8 +21,8 @@ TrackerIniIndex=0 0
 TrackerCheck=1 2 3 4 5 6 7
 FormPosX=50
 FormPosY=50
-FormSizeHeight=300
-FormSizeWidth=275
+FormSizeHeight=415
+FormSizeWidth=400
 FormState=Normal
 TrackersFile=C:\ProgramData\TorrentPatcher\trackerssimple.ini
 LastLaunch=01.01.2010 0:00:00
